<resources>
    <string name="app_name">MBox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">标题</string>
    <string name="pic">图片</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="info">说明</string>
    <string name="bbb1">按钮1</string>
    <string name="aaa2">短信2</string>
    <string name="bbb2">按钮2</string>
    <string name="aaa3">敬请期待</string>
    <string name="bbb3">按钮3</string>
    <string name="user">头像</string>
</resources>
