<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/t1"
        android:paddingLeft="5dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/etitle"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:paddingLeft="5dp"
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"/>

    <EditText
        android:id="@+id/enote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:textSize="17sp"
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/im"
        android:background="#f5dcf2"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/b1"
            android:textSize="17sp"
            android:background="@drawable/blue1"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/b2"
            android:textSize="17sp"
            android:background="@drawable/blue1"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>

    </LinearLayout>

</LinearLayout>